canvasが中央に表示できるようにした

--- a/style.css
+++ b/style.css
@@ -19,3 +19,11 @@
   width: 300px;
 }
 
+#canvasWrapper{
+  width: calc(100vw - 305px);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
