--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
   vertical-align: baseline;
 }
 
+body{
+  background-color: lightgray;
+}
 
 #fileList{
   position: fixed;
@@ -19,11 +22,16 @@
   width: 300px;
 }
 
+#defaultCanvas0{
+  box-shadow: 0px 0px 20px #888888;
+}
+
 #canvasWrapper{
   width: calc(100vw - 305px);
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
 }
 
