--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 }
 
 #defaultCanvas0{
-  box-shadow: 0px 0px 20px #888888;
+  box-shadow: 0px 0px 8px #888888;
 }
 
 #canvasWrapper{
@@ -33,5 +33,42 @@ body{
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+}
+
+#progressBox{
+  background-color: lightgray;
+  border-radius: 3px;
+  width: 250px;
+  height: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+  /* box-shadow: 0px 0px 8px white; */
+}
+
+#progressWrapper{
+  position: fixed;
+  z-index: 1;
+  height: inherit;
+  width: inherit;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+#progressText{
+  font-size: 16px;
+}
+
+#progressBar{
+  background-color: black;
+  width: 0px;
+  height: 10px;
+  /* display: none; */
 }
 
